[gd_scene load_steps=2 format=3 uid="uid://tftlhnikgsl6"]

[ext_resource type="Script" path="res://object/card/card.gd" id="1_0ihq4"]

[node name="Card" type="Panel"]
custom_minimum_size = Vector2(200, 300)
script = ExtResource("1_0ihq4")

[node name="TopLeft" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10

[node name="Rank" type="Label" parent="TopLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2"

[node name="BottomRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 10

[node name="Rank" type="Label" parent="BottomRight"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Suit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Diamonds"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
